python/testData/inspections/importFromModuleStar/source.py
from target import *

<error descr="Unresolved reference 'xyzzy'">x<caret>yzzy</error>
shazam()
